--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "dialog": "^0.3.1",
     "firebase": "^11.0.1",
     "framer-motion": "^11.15.0",
-    "gh-pages": "^6.3.0",
     "gsap": "^3.12.5",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.454.0",
@@ -37,7 +36,8 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
-    "react-swipeable-views-react-18-fix": "^0.14.1",
+    "react-swipeable": "^7.0.2",
+    "react-use": "^17.6.0",
     "shadcn-ui": "^0.2.3",
     "spline": "^0.0.0",
     "styled-components": "^6.1.13",
